# magic

./: .gitignore
01-attrition/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  environment.yml  make-data.bat  make-data.sh  nb.ipynb  pyproject.toml  requirements.txt  ruff.toml
01-attrition/docs/: Makefile  conf.py  index.rst  make.bat
01-attrition/notebooks/: 2.0-gaa-linear-models.ipynb  3.0-gaa-tree-models.ipynb  4.0-gaa-mlp-classifier.ipynb  5.0-gaa-models.ipynb
01-attrition/notebooks/exploratory/: 1.0-gaa-data-exploration.ipynb  6.0-gaa-time-split-anomaly.ipynb  nb.ipynb
01-attrition/src/dataset/: make_dataset.py
01-attrition/src/features/: build_features.py
01-attrition/src/webapp/: app.py
01-attrition/src/webapp/pages/: batch_prediction.py  make_prediction.py  show_data.py
02-hotels/: .gitignore  1  Makefile  README.md  environment.yml  pyproject.toml  setup.py
02-hotels/docs/: Makefile  conf.py  index.rst  make.bat
02-hotels/notebooks/: 2.0-gaa-modeling-baseline.ipynb
02-hotels/notebooks/exploratory/: 1.0-gaa-data-exploration.ipynb
02-hotels/src/data/: to_parquet.py
02-hotels/src/features/: __init__.py  pipeline.py
