[project]
name = 'src'
version = '0.1.1'
authors = [
    {name = 'Artsiom Halian', email = 'galyan.artyom@gmail.com'}
]
description = 'Repository for learning DS'
requires-python = '>=3.11.7'

[tool.setuptools.packages.find]
where=['src']

[project.scripts]
to-parquet = 'src.data.to_parquet:main'

[tool.setuptools]
include-package-data = true
